compiler-tests/src/test/data/diagnostic/suspend/MultibindsIsNotAllowed.kt
// ENABLE_SUSPEND_PROVIDERS

// RENDER_DIAGNOSTICS_FULL_TEXT

interface SuspendMultibindsInterface {
  @Multibinds suspend fun <!MULTIBINDS_ERROR!>bind<!>(): Set<String>
}

abstract class SuspendMultibindsClass {
  @Multibinds abstract suspend fun <!MULTIBINDS_ERROR!>bind<!>(): Set<String>
}
